--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Pramod Shetty</h1>
+    <p>Kundapura</p>
+    <input type="text">
     <script src="index.js"></script>
 </body>
 </html>
